
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef int u8 ;
typedef scalar_t__ u32 ;
struct TYPE_3__ {scalar_t__ first_char; scalar_t__ last_char; scalar_t__ inval_char; scalar_t__ sheet_column; scalar_t__ sheet_row; scalar_t__ cell_width; scalar_t__ cell_height; scalar_t__ sheet_size; int sheet_width; } ;
typedef TYPE_1__ sys_fontheader ;
typedef scalar_t__ s32 ;


 TYPE_1__* fontHeader ;
 int * fontImage ;

__attribute__((used)) static void GetFontTexel(s32 c,void *image,s32 pos,s32 stride)
{
 u32 sheets,rem;
 u32 xoff,yoff;
 u32 xpos,ypos;
 u8 *img_start;
 u8 *ptr1,*ptr2;
  sys_fontheader *sys_fontdata = fontHeader;

 if(c<sys_fontdata->first_char || c>sys_fontdata->last_char) c = sys_fontdata->inval_char;
 else c -= sys_fontdata->first_char;

 sheets = sys_fontdata->sheet_column*sys_fontdata->sheet_row;
 rem = c%sheets;
  sheets = c/sheets;
 xoff = (rem%sys_fontdata->sheet_column)*sys_fontdata->cell_width;
 yoff = (rem/sys_fontdata->sheet_column)*sys_fontdata->cell_height;
 img_start = fontImage+(sys_fontdata->sheet_size*sheets);

 ypos = 0;
 while(ypos<sys_fontdata->cell_height) {
  xpos = 0;
  while(xpos<sys_fontdata->cell_width) {
   ptr1 = img_start+(((sys_fontdata->sheet_width/8)<<5)*((ypos+yoff)/8));
   ptr1 = ptr1+(((xpos+xoff)/8)<<5);
   ptr1 = ptr1+(((ypos+yoff)%8)<<2);
   ptr1 = ptr1+(((xpos+xoff)%8)/2);

   ptr2 = image+((ypos/8)*(((stride<<1)/8)<<5));
   ptr2 = ptr2+(((xpos+pos)/8)<<5);
   ptr2 = ptr2+(((xpos+pos)%8)/2);
   ptr2 = ptr2+((ypos%8)<<2);

   *ptr2 = *ptr1;

   xpos += 2;
  }
  ypos++;
 }
}
